# x-timeline-scraper

./: .gitignore  README.md  curl_example.txt  pyproject.toml  requirements.txt
.github/workflows/: formatting.yml  labels.yaml  publish.yml  test.yml
src/: __init__.py  tweet.py  xclient.py
state/: last_id.txt
tests/: test_xclient.py
x-timeline-scraper/: timeline.py  twitter.py
