[project]
name = "xtimeline"
version = "0.1.2"
description = "Lightweight X/Twitter timeline client (GraphQL via cURL or auth strategies)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Stephan Akkerman" }]
keywords = ["twitter", "x", "timeline", "scraping", "aiohttp", "asyncio"]
dependencies = [
  "aiohttp>=3.13.5",
  "uncurl>=0.0.11",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = "black"

[tool.ruff]
line-length = 88
#select = ["I001"]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "numpy"
